--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -18,7 +18,26 @@
             <div class="d-flex align-items-center">
                 <a class="nav-link text-white {% if request.resolver_match.url_name == 'djangoapp:about' %}active{% endif %}" href="{% url 'djangoapp:about' %}">About Us</a>
                 <a class="nav-link text-white" href="{% url 'djangoapp:contact' %}">Contact Us</a>
-                <a href="{% url 'djangoapp:index' %}" class="btn btn-outline-light" type="button">Login</a>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                    <li>
+                         <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                         <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                         <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                 <input type="text" class="form-control" placeholder="Username" name="username" >
+                                 <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                 <button class="btn btn-primary" type="submit">Login</button>
+                                 <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                            </div>
+                         </form>
+                    </li>
+                    {% endif %}
+                </ul>
             </div>
         </div>
     </nav>
