--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -17,8 +17,27 @@
             <a class="navbar-brand text-white" href="{% url 'djangoapp:index' %}">Rod Car Dealer App</a>
             <div class="d-flex align-items-center">
                 <a class="nav-link text-white {% if request.resolver_match.url_name == 'djangoapp:about' %}active{% endif %}" href="{% url 'djangoapp:about' %}">About Us</a>
-                <a class="nav-link text-white" href="{% url 'djangoapp:contact' %}">Contact</a>
-                <a href="{% url 'djangoapp:index' %}" class="btn btn-outline-light" type="button">Login</a>
+                <a class="nav-link text-white" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                    <li>
+                         <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                         <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                         <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                 <input type="text" class="form-control" placeholder="Username" name="username" >
+                                 <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                 <button class="btn btn-primary" type="submit">Login</button>
+                                 <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                            </div>
+                         </form>
+                    </li>
+                    {% endif %}
+                </ul>
             </div>
         </div>
     </nav>
@@ -33,23 +52,27 @@
             </div>
 
             <!-- Formulario de contacto a la derecha -->
+
             <div class="col-md-6">
                 <form>
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter your name" aria-describedby="nameHelp">
+                        <div id="nameHelp" class="form-text">We'll never share your name with anyone else.</div>
                     </div>
-                    <div class="form-group">
-                        <label for="email">Email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter your email" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message</label>
                         <textarea class="form-control" id="message" rows="3"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
+
         </div>
     </div>
 
