--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -6,6 +6,62 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white" href="{% url 'djangoapp:index' %}">Rod Car Dealer App</a>
+                <div class="d-flex align-items-center">
+                    <a class="nav-link text-white {% if request.resolver_match.url_name == 'djangoapp:about' %}active{% endif %}" href="{% url 'djangoapp:about' %}">About Us</a>
+                    <a class="nav-link text-white" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if user.is_authenticated %}
+                        <li>
+                            <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                            <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                        </li>
+                        {% else %}
+                        <li>
+                            <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                                {% csrf_token %}
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Username" name="username" >
+                                    <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                    <button class="btn btn-primary" type="submit">Login</button>
+                                    <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                                </div>
+                            </form>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
     <!--Add a registration form here -->
+    <div class="col-md-6 pt-3">
+        <form action="{% url 'djangoapp:registration' %}" method="post">
+            {% csrf_token %}
+            <h1>Sign Up</h1>
+            <div class="mb-3">
+                <label for="name" class="form-label">User Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter User Name" name="username" required>
+            </div>
+            <div class="mb-3">
+                <label for="firstname" class="form-label">First Name</label>
+                <input type="text" class="form-control" id="firstname" placeholder="Enter First Name" name="firstname" required>
+            </div>
+            <div class="mb-3">
+                <label for="lastname" class="form-label">Last Name</label>
+                <input type="text" class="form-control" id="lastname" placeholder="Enter Last Name" name="lastname" required>
+            </div>
+            <div class="mb-3">
+                <label for="psw" class="form-label">Password</label>
+                <input type="password" class="form-control" id="psw" placeholder="Enter Password" name="psw" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Sign Up</button>
+        </form>
+    </div>
+    
+
+
+
     </body>
 </html>
