--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -1,16 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Add Review</title>
+		{% load static %}
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+		/>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css"
+			rel="stylesheet"
+		/>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
+	</head>
+	<body>
+		<!--Add nav  form here -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand text-white" href="{% url 'djangoapp:index' %}"
+					>Rod Car Dealer App</a
+				>
+				<div class="d-flex align-items-center">
+					<a
+						class="nav-link text-white {% if request.resolver_match.url_name == 'djangoapp:about' %}active{% endif %}"
+						href="{% url 'djangoapp:about' %}"
+						>About Us</a
+					>
+					<a class="nav-link text-white" href="{% url 'djangoapp:contact' %}"
+						>Contact Us</a
+					>
+					<ul class="nav navbar-nav navbar-right">
+						{% if user.is_authenticated %}
+						<li>
+							<a class="btn btn-link" href="#"
+								>{{ user.first_name }}({{ user.username }})</a
+							>
+							<a class="btn btn-link" href="{% url 'djangoapp:logout' %}"
+								>Logout</a
+							>
+						</li>
+						{% else %}
+						<li>
+							<form
+								class="form-inline"
+								action="{% url 'djangoapp:login' %}"
+								method="post"
+							>
+								{% csrf_token %}
+								<div class="input-group">
+									<input
+										type="text"
+										class="form-control"
+										placeholder="Username"
+										name="username"
+									/>
+									<input
+										type="password"
+										class="form-control"
+										placeholder="Password"
+										name="psw"
+									/>
+									<button class="btn btn-primary" type="submit">Login</button>
+									<a
+										class="btn btn-link"
+										href="{% url 'djangoapp:registration' %}"
+										>Sign Up</a
+									>
+								</div>
+							</form>
+						</li>
+						{% endif %}
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<!--Add review form here -->
 
-</head>
-    <body>
-    <!--Add review form here -->
-    </body>
+		<div class="container-fluid">
+			<h5>Add a review about <b>{{dealer.full_name}}</b></h5>
+			<form action="{% url 'djangoapp:add_review' dealer.id%}" method="post">
+				<div class="form-group">
+					<div class="mb-3">
+						<label for="content"><b>Enter the review content: </b></label>
+						<textarea
+							class="form-control"
+							id="content"
+							name="content"
+							rows="2"
+							required
+						></textarea>
+					</div>
+
+					<div class="form-check">
+						<input
+							class="form-check-input"
+							type="checkbox"
+							name="purchasecheck"
+							id="purchasecheck"
+						/>
+						<label class="form-check-label" for="purchasecheck">
+							Has purchased the car from {{dealer.full_name}} ?
+						</label>
+						<label class="text-muted"
+							>(select purchased car information below if checked)</label
+						>
+					</div>
+
+					<div class="mb-3">
+						<label for="car"
+							><b>Select Your Car ( Make - Model - Year ) : </b></label
+						>
+						<select name="car" id="car" class="form-select" required>
+							{% for car in cars %}
+							<!--<option selected value={{car.id}}>{{car.car_make.name}} - {{car.name}} - {{ car.year|date:"Y" }}</option> -->
+							<option selected value="{{car.id}}">
+								{{car.make.name}} - {{car.name}} - {{car.year|date:"Y" }}
+							</option>
+							{% endfor %}
+						</select>
+					</div>
+
+					<div class="mb-3">
+						<label for="purchasedate"><b>Select Your Purchase Date: </b></label>
+						<input
+							class="date-own form-control"
+							style="width: 300px"
+							type="text"
+							name="purchasedate"
+							id="purchasedate"
+						/>
+					</div>
+				</div>
+				{% csrf_token %}
+				<div>
+					<button class="btn btn-primary" type="submit">Submit</button>
+				</div>
+			</form>
+		</div>
+	</body>
+	<script type="text/javascript">
+		$('.date-own').datepicker({
+			format: 'dd/mm/yyyy',
+		});
+	</script>
 </html>
