--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,18 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Dealership Review</title>
+		{% load static %}
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		/>
+	</head>
 
-    <body>
+	<body>
+		<!--Add a nav bar here -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand text-white" href="{% url 'djangoapp:index' %}"
+					>Rod Car Dealer App</a
+				>
+				<div class="d-flex align-items-center">
+					<a
+						class="nav-link text-white {% if request.resolver_match.url_name == 'djangoapp:about' %}active{% endif %}"
+						href="{% url 'djangoapp:about' %}"
+						>About Us</a
+					>
+					<a class="nav-link text-white" href="{% url 'djangoapp:contact' %}"
+						>Contact Us</a
+					>
+					<ul class="nav navbar-nav navbar-right">
+						{% if user.is_authenticated %}
+						<li>
+							<a class="btn btn-link" href="#"
+								>{{ user.first_name }}({{ user.username }})</a
+							>
+							<a class="btn btn-link" href="{% url 'djangoapp:logout' %}"
+								>Logout</a
+							>
+						</li>
+						{% else %}
+						<li>
+							<form
+								class="form-inline"
+								action="{% url 'djangoapp:login' %}"
+								method="post"
+							>
+								{% csrf_token %}
+								<div class="input-group">
+									<input
+										type="text"
+										class="form-control"
+										placeholder="Username"
+										name="username"
+									/>
+									<input
+										type="password"
+										class="form-control"
+										placeholder="Password"
+										name="psw"
+									/>
+									<button class="btn btn-primary" type="submit">Login</button>
+									<a
+										class="btn btn-link"
+										href="{% url 'djangoapp:registration' %}"
+										>Sign Up</a
+									>
+								</div>
+							</form>
+						</li>
+						{% endif %}
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<!-- Add reviews as cards -->
 
-    <!--Add a nav bar here -->
+		<h1>Reviews for {{ dealer.full_name }}</h1>
+		<!-- Add reviews as cards -->
+		<div class="container">
+			<div class="card-columns">
+				{% for review in reviews %}
+				<div class="card">
+					{% if review.sentiment == "positive" %}
+					<img
+						class="card-img-left"
+						src="{{ MEDIA_URL }}/emoji/positive.png"
+						width="36px"
+						height="36px"
+						alt="Sentiment"
+					/>
+					{% elif review.sentiment == "neutral" %}
+					<img
+						class="card-img-left"
+						src="{{ MEDIA_URL }}/emoji/neutral.png"
+						width="36px"
+						height="36px"
+						alt="Sentiment"
+					/>
+					{% else %}
+					<img
+						class="card-img-left"
+						src="{{ MEDIA_URL }}/emoji/negative.png"
+						width="36px"
+						height="36px"
+						alt="Sentiment"
+					/>
+					{% endif %}
 
-    <!-- Add reviews as cards -->
-
-    </body>
-
+					<div class="card-body">
+						<p class="card-title">
+							{{ review.car_make }}, {{ review.car_model }}
+						</p>
+						<p class="card-subtitle">{{ review.car_year }}</p>
+						<p class="card-text">{{ review.review }}</p>
+					</div>
+				</div>
+				{% endfor %}
+			</div>
+		</div>
+	</body>
 </html>
