--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -1,52 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Dealership Review</title>
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		/>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+		<link
+			href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css"
+			rel="stylesheet"
+		/>
+		<script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
+		<script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+	</head>
 
-</head>
+	<body>
+		<!--Add a nav bar here -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand text-white" href="{% url 'djangoapp:index' %}"
+					>Rod Car Dealer App</a
+				>
+				<div class="d-flex align-items-center">
+					<a
+						class="nav-link text-white {% if request.resolver_match.url_name == 'djangoapp:about' %}active{% endif %}"
+						href="{% url 'djangoapp:about' %}"
+						>About Us</a
+					>
+					<a class="nav-link text-white" href="{% url 'djangoapp:contact' %}"
+						>Contact Us</a
+					>
+					<ul class="nav navbar-nav navbar-right">
+						{% if user.is_authenticated %}
+						<li>
+							<a class="btn btn-link" href="#"
+								>{{ user.first_name }}({{ user.username }})</a
+							>
+							<a class="btn btn-link" href="{% url 'djangoapp:logout' %}"
+								>Logout</a
+							>
+						</li>
+						{% else %}
+						<li>
+							<form
+								class="form-inline"
+								action="{% url 'djangoapp:login' %}"
+								method="post"
+							>
+								{% csrf_token %}
+								<div class="input-group">
+									<input
+										type="text"
+										class="form-control"
+										placeholder="Username"
+										name="username"
+									/>
+									<input
+										type="password"
+										class="form-control"
+										placeholder="Password"
+										name="psw"
+									/>
+									<button class="btn btn-primary" type="submit">Login</button>
+									<a
+										class="btn btn-link"
+										href="{% url 'djangoapp:registration' %}"
+										>Sign Up</a
+									>
+								</div>
+							</form>
+						</li>
+						{% endif %}
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<!--Add a dealer table here -->
+		<div class="container-fluid">
+			{% if messages %} {% for message in messages %}
+			<div class="alert alert-warning" role="alert">{{ message }}</div>
+			{% endfor %} {% endif %}
 
-    <body>
-
-    <!--Add a nav bar here -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white" href="{% url 'djangoapp:index' %}">Rod Car Dealer App</a>
-            <div class="d-flex align-items-center">
-                <a class="nav-link text-white {% if request.resolver_match.url_name == 'djangoapp:about' %}active{% endif %}" href="{% url 'djangoapp:about' %}">About Us</a>
-                <a class="nav-link text-white" href="{% url 'djangoapp:contact' %}">Contact Us</a>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}
-                    <li>
-                         <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                         <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
-                    </li>
-                    {% else %}
-                    <li>
-                         <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                            {% csrf_token %}
-                            <div class="input-group">
-                                 <input type="text" class="form-control" placeholder="Username" name="username" >
-                                 <input type="password" class="form-control" placeholder="Password" name="psw" >
-                                 <button class="btn btn-primary" type="submit">Login</button>
-                                 <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
-                            </div>
-                         </form>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!--Add a dealer table here -->
-
-    </body>
-
+			<table class="table" id="table" data-filter-control="true">
+				<thead>
+					<tr>
+						<th data-field="id">ID</th>
+						<th data-field="full_name">Dealer Name</th>
+						<th data-field="city">City</th>
+						<th data-field="address">Address</th>
+						<th data-field="zip">Zip</th>
+						<th data-field="state" data-filter-control="select">State</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for dealer in dealership_list %}
+					<tr>
+						<td>{{dealer.id}}</td>
+						<td>
+							<a href="{% url 'djangoapp:dealer_details' dealer.id %}"
+								>{{dealer.full_name}}</a
+							>
+						</td>
+						<td>{{dealer.city}}</td>
+						<td>{{dealer.address}}</td>
+						<td>{{dealer.zip}}</td>
+						<td>{{dealer.st}}</td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</body>
+	<script>
+		$(function () {
+			$('#table').bootstrapTable();
+		});
+	</script>
 </html>
